--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.95.0
 uvicorn==0.21.1
 numpy==1.24.2
 pandas==2.0.0
-scikit-learn==1.2.2
+scikit-learn==1.4.1.post1
 joblib==1.2.0
 boto3==1.26.115
 onnxruntime==1.16.0
