--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ __pycache__/
 # C extensions
 *.so
 
+# Project specific files
+crypto-sentiment-requirements.md
+sentiment.json
+
 # Distribution / packaging
 .Python
 env/
